--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="<%= htmlWebpackPlugin.options.config.lang %>">
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="/favicon.ico">
   <title><%= htmlWebpackPlugin.options.config.title %></title>
+  <!-- Styles -->
+  <% for (var css in htmlWebpackPlugin.files.css) { %>
+  <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
+  <% } %>
 </head>
 <body>
+  <!-- Single Page App Mounting Point -->
   <div id="root"></div>
+  <!-- Webpack manifest -->
+  <%= htmlWebpackPlugin.files.webpackManifest %>
+  <!-- Scripts -->
   <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
   <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
   <% } %>
