--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="/favicon.ico">
   <title><%= htmlWebpackPlugin.options.config.title %></title>
+  <!-- Favicons -->
+  <%= htmlWebpackPlugin.options.favicons['html_code'] %>
   <!-- Styles -->
   <% for (var css in htmlWebpackPlugin.files.css) { %>
   <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
@@ -16,6 +17,14 @@
   <div id="root"></div>
   <!-- Webpack manifest -->
   <%= htmlWebpackPlugin.files.webpackManifest %>
+  <!-- Window variables -->
+  <% if (htmlWebpackPlugin.options.window) { %>
+  <script>
+    <% for (var varName in htmlWebpackPlugin.options.window) { %>
+    window['<%=varName%>'] = <%= JSON.stringify(htmlWebpackPlugin.options.window[varName]) %>;
+    <% } %>
+  </script>
+  <% } %>
   <!-- Scripts -->
   <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
   <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
